# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pytest.yml  wemake-python.yml
page_loader/: __init__.py  file_system_worker.py  name_formatters.py  page_loader.py
page_loader/scripts/: run_page_loader.py
tests/: test.py
tests/fixtures/: error_test_page.html  hexlet_courses.html  test-page-result.html  test-page.html
tests/fixtures/links/: application.css  courses.html
tests/fixtures/responses/: 301.html
tests/fixtures/scripts/: runtime.js
