[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["berezin <isbushcar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
