[tool.poetry]
name = "hexlet-code"
version = "0.6.0"
description = ""
authors = ["berezin <isbushcar@gmail.com>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
bs4 = "^0.0.1"
progress = "^1.5"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.2"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
requests-mock = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.run_page_loader:main"